    hppa with linuxthreads.
  * patches/arm/submitted-RTLD_SINGLE_THREAD_P.diff: fix a missing #defined
    on arm.
  * patches/localedata/submitted-as_IN.diff: new patch to fix a not anymore
    unassigned unicode code.
  * locales-depver: tighten locales dependencies.
  * debian/sysdeps/linux.mk, debian/script.in/kernelcheck.sh: bump minimum
    kernel requirement to 2.6.8.

  [ Petr Salinger]
  * kfreebsd/local-sysdeps.diff: update to revision 1949 (from glibc-bsd).
  * any/local-linuxthreads-defines.diff: new patch to restore a few defines
    in config.make.in still needed by linuxthreads.
  * patches/local-tst-mktime2.diff: fix time/tst-mktime2.c.

  [ Pierre Habouzit ]
  * kernelchecks.sh: Make the warning about kernel 2.6 more explicit so that
    people can deal with it without adding yet-another critical bug on the
    glibc.
  * kernelchecks.sh: add some quotes to unconfuse syntax hilighting a bit.
  * nscd.init: ksh is confused if you call functions start or stop.
    Closes: 428884.
  * patches/locale/preprocessor-collate.diff: update it to work (with
    restrictions) with depth >= 2 copies. The patch is scurvy and make locale
    parsing completely non reentrant.
  * debian/control: ${Source-Version} -> ${binary:Version}.
  * debian/debhelper.in/nscd.lintian: yes, /var/db for lintian is ok.
  * patches/any/submitted-fileops-and-signals.diff: fixes libio file
    operations in presence of recoverable errors.
    Closes: 429021.
  * patches/localedata/fix-am_ET.diff: fix am_ET using our preprocessor
    extensions.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 22 Jun 2007 20:36:17 +0200

glibc (2.5-11) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * patches/hppa/submitted-pie.diff: new patch to fix PIE on hppa. Patch by
    Sébastien Bernard and John David Anglin.  Closes: #427990.
  * debian/debhelper.in/libc.preinst: use -e instead of -f to canonicalize
    links.  Closes: #427416.

  [ Pierre Habouzit ]