@@ -101,6 +101,7 @@ mandir=$(prefix)/share/man
 sbindir=$(prefix)/sbin
 
 BUILD_CC = gcc-4.1
+CXX = g++-4.1
 
 RUN_TESTSUITE = yes
 
