@@ -23,6 +23,7 @@ libc_extra_config_options := $(extra_config_options) --without-__thread --withou
 
 # Build with gcc-4.1 is not yet supported.
 CC = gcc-4.0
+CXX = g++-4.0
 BUILD_CC = gcc-4.0
 
 # Only use libidn as add-on.
