@@ -42,6 +42,7 @@ amd64_configure_target = x86_64-linux
 # __x86_64__ is defined here because Makeconfig uses -undef and the
 # /usr/include/asm wrappers need that symbol.
 amd64_CC = $(CC) -m64 -D__x86_64__
+amd64_CXX = $(CXX) -m64 -D__x86_64__
 amd64_extra_cflags = -O3 -g
 amd64_extra_config_options = $(extra_config_options) --disable-profile
 amd64_includedir = /usr/include/x86_64-linux-gnu
