@@ -15,6 +15,7 @@ libc0.1-i386_shlib_dep = libc0.1-i386 (>= $(shlib_dep_ver))
 
 i386_configure_target = i486-kfreebsd
 i386_CC = $(CC) -m32
+i386_CXX = $(CXX) -m32
 i386_add-ons = ports linuxthreads $(add-ons)
 i386_extra_cflags = -march=pentium4 -g -O3
 i386_extra_config_options = $(extra_config_options) --disable-compatible-utmp
