@@ -6,6 +6,7 @@ libc_add-ons = ports nptl $(add-ons)
 mipsn32_add-ons = ports nptl $(add-ons)
 mipsn32_configure_target = mips32-linux
 mipsn32_CC = $(CC) -mabi=n32
+mipsn32_CXX = $(CXX) -mabi=n32
 libc6-mipsn32_shlib_dep = libc6-mipsn32 (>= $(shlib_dep_ver))
 mipsn32_extra_cflags = -O3 -g
 mipsn32_slibdir = /lib32
@@ -18,6 +19,7 @@ mipsn32_extra_config_options := $(extra_config_options) --disable-profile
 mips64_add-ons = ports nptl $(add-ons)
 mips64_configure_target = mips64-linux
 mips64_CC = $(CC) -mabi=64
+mips64_CXX = $(CXX) -mabi=64
 libc6-mips64_shlib_dep = libc6-mips64 (>= $(shlib_dep_ver))
 mips64_extra_cflags = -O3 -g
 mips64_slibdir = /lib64
