@@ -16,6 +16,7 @@ libc6-powerpc_shlib_dep = libc6-powerpc (>= $(shlib_dep_ver))
 powerpc_add-ons = nptl $(add-ons)
 powerpc_configure_target = powerpc-linux
 powerpc_CC = $(CC) -m32
+powerpc_CXX = $(CXX) -m32
 powerpc_extra_cflags = -O3 -g
 powerpc_includedir = /usr/include/powerpc-linux-gnu
 powerpc_extra_config_options := $(extra_config_options) --disable-profile
